# poster

./: .gitignore  README.md  Spacefile  debug.py  example.env  pyproject.toml  requirements.txt  run.py  tailwind.config.js  tailwind.styles.css
.github/workflows/: cd.yml
fasthtmx/: __init__.py  fasthtmx.py  headers.py  router.py  utils.py
src/: __init__.py  main.py  requirements.txt
src/api/: __init__.py
src/app/components/: load_three_dots.html
src/app/home/: __init__.py
src/app/home/components/: search_results.html
src/controllers/: youtube.py
src/models/: album.py
src/pages/: __init__.py  layout.html
src/pages/components/: load_three_dots.html
src/pages/home/: __init__.py  page.html
src/pages/home/components/: poster.html  sidebar.html
src/public/: styles.css
src/utils/: functions.py
